# libgconf-bridge

./: ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  configure.ac  libgconf-bridge.doap  libgconf-bridge.pc.in  libgconf-bridge.vapi
doc/: Makefile.am  Makefile.in  libgconf-bridge-docs.sgml  libgconf-bridge-sections.txt  libgconf-bridge-undocumented.txt
doc/tmpl/: gconf-bridge.sgml
libgconf-bridge/: Makefile.am  gconf-bridge.c  gconf-bridge.h
po/: LINGUAS  POTFILES.in  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  hu.po  it.po  ja.po  lv.po  nb.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
tests/: Makefile.am  test.c
